fix: 불변 크기 리스트 사용으로 인해 add 연산이 제한되는 에러 수정